fix alignment of recipe metrics and layout of main recipe content

--- a/css/style.css
+++ b/css/style.css
@@ -112,12 +112,16 @@ Recipe page
     margin: 0;
 }
 
+.recipe-measure {
+    width: 70px;
+}
+
 .recipe-metric {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: baseline;
-    width: 110px;
+    /* width: 135px; */
     /* background-color: pink; */
 }
 
@@ -142,11 +146,13 @@ Recipe page
     margin: 1rem;
 }
 
-.recipe-container p, li, .recipe-metric {
+.recipe-container p, li, 
+.recipe-metric {
     font-weight: 300;
 }
 
-.recipe-container h3, .recipe-measure {
+.recipe-container h3, 
+.recipe-measure {
     text-transform: uppercase;
     font-size: 1.25rem;
     font-family: 'Bree Serif', serif;
@@ -164,7 +170,10 @@ Recipe page
         align-items: flex-start;
     }
 
-    .recipe-img, .recipe-desc {
+    .recipe-img, 
+    .recipe-desc,
+    .ingredients-container,
+    .instructions-container {
         width: 50%;
     }
 }
